# acs-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-debug  Makefile  Readme.md  docker-compose-debug.yml
.devcontainer/: devcontainer.json
deployment/compose/: Dockerfile  Dockerfile-debug  docker-compose-debug.yml  docker-compose.yml
deployment/compose/mongo_init_script/: init-mongo.js
docs/: api.md  system.md
mongo_init_script/: init-mongo.js
opener/: Cargo.toml
opener/src/: app.rs  lib.rs  main.rs  ws_client.rs
opener/src/ws_client/: dsl.rs
service/: Cargo.toml
service/src/: auth.rs  graphql.rs  lib.rs  main.rs  persistence.rs  server.rs  session.rs
service/src/graphql/: auth.rs  barrier_manufacturer.rs  barrier_model.rs  error.rs  opener.rs  role.rs
service/src/persistence/: barrier_manufacturer.rs  barrier_model.rs  client.rs  opener.rs  role.rs
service/src/server/: command.rs  dsl.rs  message.rs
service/src/session/: dsl.rs
src/: auth.rs  graphql.rs  lib.rs  main.rs  persistence.rs  server.rs  session.rs
src/graphql/: auth.rs  error.rs  opener.rs  role.rs  user.rs
src/persistence/: client.rs  error.rs  opener.rs  role.rs  user.rs  utils.rs
src/session/: dsl.rs
