[package]
name = "opener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
tokio={version="1.7.1", features=["macros", "rt-multi-thread", "io-std", "sync", "time", "fs"]}
tokio-util={version="0.6.7", features = [ "codec" ]}
url="2.2.2"
futures-channel="0.3.15"
thiserror = "1.0.25"
lazy_static = "1.4.0"
signal-hook="0.3.9"
signal-hook-tokio={version="0.3.0", features=["futures-v0_3"]}
anyhow="1.0.41"
futures-util={version="0.3.5", features=["sink"]}
tokio-tungstenite="0.14.0"
serde={version="1.0.64", features=["derive"]}
serde_json="1.0.64"
clap = { version = "3.2.8", features = ["derive"] }
sha256 = "1.0.3"
