[package]
name = "acs-service"
version = "1.0.28"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
env_logger = "0.9.0"
actix-cors = "0.6.1"
actix-web = "4.0.1"
actix-web-actors = "4.0.1"
anyhow = "1.0.57"
async-graphql = { version = "4.0.0", features = ["dataloader", "opentelemetry"] }
opentelemetry = {  version = "0.17.0", features = ["rt-async-std"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-async-std"] }
async-graphql-actix-web = "4.0.0"
async-trait = "0.1.51"
bcrypt = "0.10.1"
bson = {version = "2.0.1", features = ["chrono-0_4"] }
chrono = "0.4.19"
futures = "0.3.17"
hex = "0.4.3"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
mongodb = {version="2.0.1", default-features = false, features=["async-std-runtime"]}
rand = {version="0.8.4", features=["std_rng"]}
serde={version="1.0.64", features=["derive"]}
serde_json="1.0.64"
thiserror = "1.0.30"
once_cell = "1.8.0"
slab = "0.4.5"
async-std = "1.11.0"
tokio={version="1.7.1", features=["macros", "rt-multi-thread"]}
sha256 = "1.0.3"
